ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecsdemo-frontend
spec:
  backend:
    serviceName: ecsdemo-frontend
    servicePort: 80
